--- a/mern-stack/package.json
+++ b/mern-stack/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.3.2",
+    "mongoose-sequence": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
