--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "editor.accessibilityPageSize": 8,
     "editor.minimap.showMarkSectionHeaders": false,
     "editor.minimap.sectionHeaderFontSize": 8,
-    "screencastMode.fontSize": 20
+    "screencastMode.fontSize": 20,
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
