--- a/practices/my-app/tsconfig.json
+++ b/practices/my-app/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/todoReducer/tasksReducer.js", "app/components/todoReducer/TaskApp.js", "app/components/todoReducer/tasksReducer.js", "app/components/todoReducer/TaskApp.js"],
   "exclude": ["node_modules"]
 }
