--- a/TodoShadcn/my-app/package.json
+++ b/TodoShadcn/my-app/package.json
@@ -17,7 +17,9 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-immer":"0.10.0",
+    "@radix-ui/react-slot":"1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
